# fast-legion

./: .gitignore  HISTORY.md  LICENSE  README.md  pyproject.toml
examples/: basic.py  sqlalchemy.py
fast_legion/: __init__.py  constants.py  main.py  security_utils.py
fast_legion/schemas/: token.py
tests/: test_fast_legion.py
